fix spacing on footer

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,4 +11,11 @@ nav {
   width: 100%; 
   z-index: 1;
   text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.sidenav {
+  z-index: 1;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
